# Avishkara

./: .gitignore  AGENTS.md  README.md  render.yaml
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/constants/: __init__.py  pose.py  upload.py
backend/app/database/: __init__.py  session.py
backend/app/models/: assessment.py  assessment_snapshot.py  athlete_profile.py  authority_role.py  pose_processing.py  shortlist.py  user.py  video.py
backend/app/routers/: analysis.py  auth.py  authority.py  dependencies.py  profile.py  videos.py
backend/app/schemas/: auth.py  authority.py  benchmark.py  biomechanics.py  jump.py  leaderboard.py  phase.py  pose.py  processing.py  profile.py  progress.py  recommendation.py  video.py  video_quality.py
backend/app/services/: __init__.py  assessment.py  auth_service.py  authority.py  benchmark.py  benchmark_loader.py  biomechanical_visualization.py  biomechanics.py  (+15 more)
backend/benchmarks/: cricket_bowling.json  jumping.json  running.json
backend/scripts/: grant_authority.py  seed_demo.py
backend/tests/: conftest.py  test_analysis_workflow.py  test_assessment.py  test_auth.py  test_authority.py  test_benchmark.py  test_benchmark_loader.py  test_biomechanical_visualization.py  test_biomechanics.py  test_config.py  test_jump_analyzer.py  test_leaderboard.py  test_mediapipe_pose.py  test_phase_detection.py  test_profile.py  test_progress_analytics.py  test_recommendation.py  test_reports.py  test_running_gait_analysis.py  test_video_processing.py  test_video_quality.py  test_videos.py
(+88 files in other folders)
