[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "avishkara-api"
version = "0.1.0"
description = "Physics-informed sports biomechanics API"
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.21,<1",
  "asyncpg>=0.30,<1",
  "email-validator>=2.2,<3",
  "fastapi>=0.115,<1",
  "mediapipe>=0.10.35,<0.11",
  "numpy>=2,<3",
  "opencv-contrib-python>=5.0,<6",
  "pwdlib[argon2]>=0.3,<1",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.8,<3",
  "PyJWT>=2.10,<3",
  "reportlab>=4.2,<5",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy[asyncio]>=2.0,<2.1",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
